# WISE

./: README.md  README.txt  Test_move.txt  WISE_UQ.ipynb  gsv_call.txt  pyproject.toml  request.yml  test.txt  test_move2  wildfires_wise_jupyter_demo.ipynb
demo/: wildfires_wise_jupyter_demo.ipynb
python_scripts/: modify_fgmj.py  ncdf_edits_multiarea.py  newest_test.py  run_wildfires_wise.py  test_print.py
python_scripts_container/: modify_fgmj.py  ncdf_edits_multiarea.py  run_wildfires_wise.py  run_wise.py
src/wise/: example_ncdf.py  input.txt  modify_fgmj.py  ncdf_edits_multiarea.py  ncdf_to_txt.py  run_wildfires_wise.py  run_wise.py
