[project]
name = "wise"
version = "0.1.0"
authors = [
  { name="Joonas Kolstela", email="joonas.kolstela@fmi.fi" },
]
description = "WISE"
readme = "README.txt"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "netcdf4",
]

[project.urls]
Homepage = "https://github.com/Joonasko/WISE"

[project.scripts]
run_wise = "fwi.run_wise:main"
